--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "15.4.4",
+    "next-pwa": "^5.6.0",
     "photoswipe": "^5.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
