--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev-no-turbopack": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@serwist/next": "^9.1.1",
     "next": "15.4.4",
-    "next-pwa": "^5.6.0",
     "photoswipe": "^5.4.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "serwist": "^9.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
