--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.5",
     "@serwist/next": "^9.1.1",
     "next": "15.4.4",
     "photoswipe": "^5.4.4",
